# automateLinux

./: .deploy-test  .gitignore  .gitmodules  .mcp.json  101.sh  101.txt  AGENTS.md  CLAUDE.md  GEMINI.backup.md  GEMINI.md  KEY_ENTER_ANALYSIS.md  KEY_ENTER_ANALYSIS_COMPLETE.txt  KEY_ENTER_EXECUTIVE_SUMMARY.md  KEY_ENTER_MASTER_SUMMARY.md  KEY_ENTER_PROPOSED_FIXES.md  README.md  SKILL.md  _testCopy.sh  _testStandalone.sh  a  automation-scripts.service  automation.md  b4Test.sh  chromeExtension.crx  code-stdin-4eA  code-stdin-gIW  debug_git_logic.js  debug_tree.txt  discover_mutter_api.py  do.py  go.sh  input-remapper-daemon.service.dsh-also  install.sh  instructions.txt  listen_mutter_stream.py  measure-paste-timing.sh  mouse-remap-debug.py  mouse_to_enter.py  mouse_to_enter.service  output.txt  (+35 more)
.claude/: settings.json  settings.local.json  statusline-command.sh
.gemini/: settings.json
applications/: GEMINI.md  com.automatelinux.loom.desktop  com.realvnc.vncconnectsetup.desktop  freecad.desktop  freecad.desktop.bak  google-chrome.desktop  mimeinfo.cache  testDirHistory.desktop
autostart/: GEMINI.md  chrome.desktop  code.desktop  rdp-credentials.desktop  terminal.desktop
bashrc/: .bashMyBashrc  .bashMyBashrcFirstThingInBashrc  .bashMyBashrcTheRealPath  .bashMyBashrcTheRealPathBackop  .bashrc  101.sh  aliases.sh  bashrc  bashrcLog.txt  bindings.sh  dirHistory.sh  dirHistorynot a tty.sh  env.sh  firstThing.sh  functions.sh  getRealPath.sh  myBashrc.sh  openAppsOnStartup.sh  promptCommand.sh  ps1.sh  source.sh  trace_sources.sh
chromeExtension/: GEMINI.md  README.md  background.js  background.js.bak  com.automatelinux.tabtracker.json  content.js  key.pem  manifest.json  native-host-wrapper.sh  native-host.py  native-host.sh
daemon/: .gitignore  AGENTS.copy.md  AGENTS.md  CMakeLists.txt  GEMINI.md  README.md  automatelinux-manager.service  build.sh  daemon-completion.bash  daemon.service  dbChanged.sh  fillDb.sh  getDaemonPID.sh  getSocketPath.sh  http-bridge.py  printDir.sh  read.sh  restart.sh  restartDaemonCoproc.sh  sendJson  sendJson.c  showDb.sh  stop_daemon.sh  test_daemon_integration.sh  test_dbus.js  test_deep  test_deep.cpp  test_sendkeys.sh  test_x11  test_x11.cpp  watch.sh
daemon/demo/: CMakeLists.txt  build.sh  client  server
daemon/demo/include/: connection.h
daemon/demo/src/client/: client.c
daemon/demo/src/server/: server.c
daemon/doc/: daemon.1
daemon/include/: AutomationManager.h  ClientSender.h  Constants.h  DaemonServer.h  DatabaseTableManagers.h  Globals.h  InputMapper.h  KVTable.h  KeyNames.h  KeyboardManager.h  MySQLManager.h  PeerManager.h  Types.h  Utils.h  Version.h  cli.h  cmdApp.h  cmdBrowser.h  cmdDatabase.h  cmdInput.h  cmdLogging.h  cmdLoom.h  cmdPeer.h  cmdPort.h  cmdSystem.h  cmdTerminal.h  cmdWindow.h  cmdWireGuard.h  common.h  dirHistory.h  main.h  mainCommand.h  sendKeys.h  system.h  terminal.h  using.h
daemon/old/: config.cpp  config.h  dirHistory.cpp  dirHistory.h  useful.cpp
daemon/scripts/: restart_loom.sh  setup_wireguard_peer.sh  start_dashboard.sh  stop_loom.sh  test_lsof.sh
daemon/src/: AutomationManager.cpp  ClientSender.cpp  DaemonServer.cpp  DatabaseTableManagers.cpp  InputMapper.cpp  KVTable.cpp  KeyboardManager.cpp  MacroConfig.cpp  MySQLManager.cpp  PeerManager.cpp  Utils.cpp  cli.cpp  cmdApp.cpp  cmdBrowser.cpp  cmdDatabase.cpp  cmdInput.cpp  cmdLogging.cpp  cmdLoom.cpp  cmdPeer.cpp  cmdPort.cpp  cmdSystem.cpp  cmdTerminal.cpp  cmdWindow.cpp  cmdWireGuard.cpp  dirHistory.cpp  main.cpp  mainCommand.cpp  sendKeys.c  system.cpp  terminal.cpp
daemon/testDaemon/: CMakeLists.txt  testDaemon
daemon/testDaemon/src/: main.c
daemon/testTime/: CMakeLists.txt  testTime
daemon/tests/: quick_test.sh  test_daemon_integration.sh  test_sendkeys.sh
dashboard/: GEMINI.md  bridge.cjs  package-lock.json  package.json
data/: terminaloutput1.txt  trapErrLog.txt
desktop/: GEMINI.md  LM-Studio.desktop.tmp  SKILL.md  audioTunnel.desktop  audioTunnel.sh  boot.desktop  rdpLaptop.desktop  rdpPeer.desktop  rdpPeer.sh  shutDown.desktop  shutDownCopy.desktop  shutdown.desktop  testDirHistory.desktop
docs/: GEMINI.md  permissions.md
evsieve/: AGENTS.md  README.md  instructions.txt
gnomeExtensions/: AGENTS.md  AGENTS.md.backup  GEMINI.md
log/: error.txt  evsieve.log.txt  log.txt  systemd.txt
mappings/: corsairKeyBoard.sh  corsairKeyBoardLogiMouse.sh  corsairKeyboard.sh  corseairKeyboard.sh  logiMouse.sh  thumbToEnter.sh
profile/: .profile  GEMINI.md
services/: enable.sh  restart.sh  run-mappings.service  run.sh  stop.sh
sudoers/: GEMINI.md  codingUsers  sudoers  sudoers.copy  system.copy.conf
symlinks/: 101.sh  GEMINI.md  daemon  fileSize  led  print  restartCorsairKeyBoardLogiMouseService.sh  sendKeys  stopCorsairKeyBoardLogiMouseService.sh  symlinks.txt  tailWindow  termcontrol  test.sh  theRealPath  theRealPath2  theRealPathFile
terminal/: 101.sh  GEMINI.md  README.md  aliases.sh  bash_history  bashrc  bashrcLog.txt  bindings.sh  colors.sh  completion.sh  exports.sh  firstThing.sh  firstTime.sh  functions.sh  gSettings.sh  geminiSessions.sh  myBashrc.sh  output.txt  promptCommand.sh  ps1.sh  source.sh  sourceAndRun.sh  theRealPath.sh  tmux.conf  unset.sh
test/: _testCopy.sh  runTest.sh  test.sh
tests/: GEMINI.md  fix_chrome_preferences.py  measure-paste-timing.sh  reload-chrome-extension.sh  reproduce_enter.py  test-ack-verification.sh  test-comprehensive-comm.sh  test-e2e-focus-paste.sh  test-focus-ack.sh  test-focus-paste-e2e.sh  (+9 more)
utilities/lastChanged/: CMakeLists.txt  lastChanged
utilities/lastChanged/include/: gitignore.h
utilities/lastChanged/src/: gitignore.c  main.c  scanner.c
utilities/portal-handler/: CMakeLists.txt
utilities/portal-handler/src/: PortalManager.cpp  PortalManager.h  main.cpp
utilities/termcontrol/: CMakeLists.txt  README.md  termcontrol-completion.bash
utilities/termcontrol/examples/: main.cpp  tailwindow.cpp  terminfo.cpp
utilities/termcontrol/include/: buffer.hpp  region.hpp  terminal.hpp
utilities/termcontrol/src/: buffer.cpp  main.cpp  terminal.cpp
(+323 files in other folders)
