cmake_minimum_required(VERSION 3.10)
project(UnixSocketExample C)
set(CMAKE_C_STANDARD 11)
include_directories(${CMAKE_SOURCE_DIR}/include)
include_directories(${CMAKE_SOURCE_DIR}/include)
file(GLOB SERVER_SRC ${CMAKE_SOURCE_DIR}/src/server/*.c)
file(GLOB CLIENT_SRC ${CMAKE_SOURCE_DIR}/src/client/*.c)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
add_executable(server ${SERVER_SRC})
add_executable(client ${CLIENT_SRC})